--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </p>
           </li>
           <li>
-            <img src="images/Rectangle2.svg" alt="" />
+            <img src="images/Rectangle2.svg" alt="" width="" />
 
             <h3>Пунктуальность</h3>
             <p>
