--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <section>
         <ul>
           <li>
-            <img src="images/Rectangle1.svg" alt="" width="278" />
+            <img src="images1/Rectangle1.svg" alt="" width="278" />
 
             <h3>Внимание к деталям</h3>
             <p>
@@ -43,7 +43,7 @@
             </p>
           </li>
           <li>
-            <img src="images/Rectangle2.svg" alt="" width="278" />
+            <img src="images1/Rectangle2.svg" alt="" width="278" />
 
             <h3>Пунктуальность</h3>
             <p>
@@ -53,7 +53,7 @@
             </p>
           </li>
           <li>
-            <img src="images/Rectangle3.svg" alt="" width="278" />
+            <img src="images1/Rectangle3.svg" alt="" width="278" />
 
             <h3>Планирование</h3>
             <p>
@@ -63,7 +63,7 @@
             </p>
           </li>
           <li>
-            <img src="images/Rectangle4.svg" alt="" width="278" />
+            <img src="images1/Rectangle4.svg" alt="" width="278" />
 
             <h3>Современные технологии</h3>
             <p>
@@ -78,16 +78,16 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <img src="images/imgo.svg" alt="" width="380" />
+            <img src="images1/imgo.svg" alt="" width="380" />
             <h3><a href="">Десктопные приложения</a></h3>
           </li>
           <li>
-            <img src="images/boxo.svg" alt="" width="380" />
+            <img src="images1/boxo.svg" alt="" width="380" />
             <h3><a href="">Мобильные приложения </a></h3>
           </li>
 
           <li>
-            <img src="images/img(1).svg" alt="" width="380" />
+            <img src="images1/img(1).svg" alt="" width="380" />
             <h3><a href="">Дизайнерские решения </a></h3>
           </li>
         </ul>
@@ -97,7 +97,7 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="images/foto11.svg" alt="" width="278" />
+            <img src="images1/foto11.svg" alt="" width="278" />
             <h3>John Smith</h3>
             <p>Product Designer</p>
             <ul>
@@ -108,7 +108,7 @@
             </ul>
           </li>
           <li>
-            <img src="images/foto12.svg" alt="" width="278" />
+            <img src="images1/foto12.svg" alt="" width="278" />
             <h3>Marta Stewart</h3>
             <p>Frontend Developer</p>
 
@@ -121,7 +121,7 @@
           </li>
 
           <li>
-            <img src="images/foto13.svg" alt="" width="278" />
+            <img src="images1/foto13.svg" alt="" width="278" />
             <h3>Robert Jakis</h3>
             <p>Marketing</p>
             <ul>
@@ -132,7 +132,7 @@
             </ul>
           </li>
           <li>
-            <img src="images/foto14.svg" alt="" width="278" />
+            <img src="images1/foto14.svg" alt="" width="278" />
             <h3>Martin Doe</h3>
             <p>UI Designer</p>
             <ul>
