--- a/index.html
+++ b/index.html
@@ -17,24 +17,21 @@
       </nav>
       <ul>
         <li>
-          <a href="">
+          <a href="mailto:info@devstudio.com">
             info@devstudio.com
           </a>
         </li>
-        <li>
-          +38 096 111 11 11
-        </li>
+        <li><a href="+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
       <section>
         <h1>эффективные решения для вашего бизнеса</h1>
+        <a href="">заказать услугу</a>
       </section>
       <section>
         <ul>
           <li>
-            <img src="images1/Rectangle1.svg" alt="" width="278" />
-
             <h3>Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало <br />
@@ -43,8 +40,6 @@
             </p>
           </li>
           <li>
-            <img src="images1/Rectangle2.svg" alt="" width="278" />
-
             <h3>Пунктуальность</h3>
             <p>
               Задача организации, в особенности же <br />
@@ -53,8 +48,6 @@
             </p>
           </li>
           <li>
-            <img src="images1/Rectangle3.svg" alt="" width="278" />
-
             <h3>Планирование</h3>
             <p>
               Равным образом консультация с <br />
@@ -63,8 +56,6 @@
             </p>
           </li>
           <li>
-            <img src="images1/Rectangle4.svg" alt="" width="278" />
-
             <h3>Современные технологии</h3>
             <p>
               Значимость этих проблем настолько<br />
@@ -79,16 +70,16 @@
         <ul>
           <li>
             <img src="images1/imgo.svg" alt="" width="380" />
-            <h3><a href="">Десктопные приложения</a></h3>
+            <h3>Десктопные приложения</h3>
           </li>
           <li>
             <img src="images1/boxo.svg" alt="" width="380" />
-            <h3><a href="">Мобильные приложения </a></h3>
+            <h3>Мобильные приложения</h3>
           </li>
 
           <li>
             <img src="images1/img(1).svg" alt="" width="380" />
-            <h3><a href="">Дизайнерские решения </a></h3>
+            <h3>Дизайнерские решения</h3>
           </li>
         </ul>
       </section>
@@ -162,8 +153,8 @@
 
       <div>
         <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <p><a href="">info@example.com</a></p>
-        <p>+38 099 111 11 11</p>
+        <p><a href="mailto:info@example.com">info@example.com</a></p>
+        <p><a href="tel:+380991111111">+38 099 111 11 11</a></p>
       </div>
 
       <div>
