--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <section>
         <ul>
           <li>
+            <img src="images1/Vector1.svg" />
             <h3>Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало <br />
@@ -40,6 +41,7 @@
             </p>
           </li>
           <li>
+            <img src="images1/Vector2.svg" />
             <h3>Пунктуальность</h3>
             <p>
               Задача организации, в особенности же <br />
@@ -48,6 +50,7 @@
             </p>
           </li>
           <li>
+            <img src="images1/Vector3.svg" />
             <h3>Планирование</h3>
             <p>
               Равным образом консультация с <br />
@@ -56,6 +59,7 @@
             </p>
           </li>
           <li>
+            <img src="images1/Vector4.svg" />
             <h3>Современные технологии</h3>
             <p>
               Значимость этих проблем настолько<br />
