--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section>
         <ul>
           <li>
-            <img src="images1/Vector1.svg" />
+            <img src="images1/Vector1.svg" alt="" />
             <h3>Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало <br />
@@ -41,7 +41,7 @@
             </p>
           </li>
           <li>
-            <img src="images1/Vector2.svg" />
+            <img src="images1/Vector2.svg" alt="" />
             <h3>Пунктуальность</h3>
             <p>
               Задача организации, в особенности же <br />
@@ -50,7 +50,7 @@
             </p>
           </li>
           <li>
-            <img src="images1/Vector3.svg" />
+            <img src="images1/Vector3.svg" alt="" />
             <h3>Планирование</h3>
             <p>
               Равным образом консультация с <br />
@@ -59,7 +59,7 @@
             </p>
           </li>
           <li>
-            <img src="images1/Vector4.svg" />
+            <img src="images1/Vector4.svg" alt="" />
             <h3>Современные технологии</h3>
             <p>
               Значимость этих проблем настолько<br />
